[package]
name = "recurl"
version = "0.1.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]
edition = "2018"

[lib]
name = "curl"
crate-type = ["cdylib", "staticlib"]

[dependencies]
reqwest = "0.9.17"
libc = "0.2.58"
c_str_macro = "1.0.2"
chrono = "0.4.6"

[dependencies.progress-streams]
version = "1.0.0"
git = "https://github.com/panicbit/progress-streams"
branch = "fn_mut"
